# cw20-taxed

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.js  package-lock.json  package.json  rust-toolchain.toml  schema.sh
.github/workflows/: build_and_test.yml
contracts/cw20-base/src/: contract.rs
contracts/cw20-ics20/src/: contract.rs  ibc.rs
contracts/cw20-taxed/: Cargo.toml
contracts/cw20-taxed/src/: allowances.rs  contract.rs  enumerable.rs  lib.rs  msg.rs  state.rs  tax.rs  whale.rs
