[package]
name = "cw20-taxed"
version = "1.1.0+taxed001"
authors = ["Till Ziegler <tz@schoeneweide.tk>"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token with blacklist tax"
license = "Apache-2.0"
repository = "https://fragwuerdig/cw20-taxed"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-storage-plus = "1.1.2"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = "1.0.2"
cw-utils = "1.0.2"
